--- a/lineTest/lineTest/lineTest.vcxproj.filters
+++ b/lineTest/lineTest/lineTest.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="project_methods.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="main_header.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
