--- a/lineTest/lineTest/lineTest.vcxproj.filters
+++ b/lineTest/lineTest/lineTest.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="project_methods.cpp">
       <Filter>리소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="writeMain01.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="lineContainer.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mstring.h">
@@ -63,6 +69,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="main_header.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="mCaret.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="lineContainer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
