getstrpixelwidth에서 시작인덱스가 끝인덱스보다 커지는 문제잡음

--- a/lineTest/lineTest/lineTest.vcxproj
+++ b/lineTest/lineTest/lineTest.vcxproj
@@ -183,6 +183,9 @@
     <ClInclude Include="mWordPixel.h" />
     <ClInclude Include="project_methods.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
